[project]
name = "stream-handler"
version = "0.1.0"
description = "Python library for handling streaming responses"
authors = [{ name = "Mitanshu" },]
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = ["pydantic (==2.11.3)"]

[tool.poetry]
repository = "https://github.com/mitanshu610/stream_handler.git"
packages = [
    { include = "stream_handler", from = "src" }
]

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.15.0"
pylint = "==3.2.3"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"